# PyMCU

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  COMMERCIAL_EXCEPTION.md  CONTRIBUTING.md  CREDITS.md  Dockerfile  LANGUAGE_ROADMAP.md  LICENSE  PyMCU.slnx  README.md  hatch_build.py  justfile  pyproject.toml
docs/: .gitignore  (+3 more)
examples/test/: pyproject.toml
examples/test/src/: main.py
examples/test2/: pyproject.toml
examples/test2/src/: main.py
examples/test3/: pyproject.toml
examples/test3/src/: app.py
examples/test5/: pyproject.toml
examples/test5/src/: main.asm  main.py  nco.py  uart.py
examples/test6/: pyproject.toml
examples/test6/src/: main.py  pic_example.py
extensions/pymcu-arm/: Directory.Build.props  README.md  pyproject.toml
extensions/pymcu-arm/src/csharp/cli/: Program.cs  PyMCU.Backend.ARM.Cli.csproj
extensions/pymcu-arm/src/csharp/lib/: ArmBackendProvider.cs  PyMCU.Backend.ARM.csproj
extensions/pymcu-avr/: Directory.Build.props  README.md  pyproject.toml
extensions/pymcu-avr/src/csharp/lib/: PyMCU.Backend.AVR.csproj
extensions/pymcu-backend-avr/: pyproject.toml
extensions/pymcu-backend-avr/csharp/cli/: PyMCU.Backend.AVR.Cli.csproj
extensions/pymcu-backend-avr/csharp/lib/: PyMCU.Backend.AVR.csproj
extensions/pymcu-backend-avr/src/csharp/lib/: PyMCU.Backend.AVR.csproj
extensions/pymcu-backend-avr/src/pymcu_backend_avr/: __init__.py  plugin.py
extensions/pymcu-backend-pic/: Directory.Build.props  README.md  pyproject.toml
extensions/pymcu-backend-pic/src/csharp/cli/: Program.cs  PyMCU.Backend.PIC.Cli.csproj
extensions/pymcu-backend-pic/src/csharp/lib/: PicBackendProvider.cs  PyMCU.Backend.PIC.csproj
extensions/pymcu-backend-pio/: pyproject.toml
extensions/pymcu-backend-pio/src/csharp/cli/: PyMCU.Backend.PIO.Cli.csproj
extensions/pymcu-backend-pio/src/csharp/lib/: PIOBackendProvider.cs  PyMCU.Backend.PIO.csproj
extensions/pymcu-backend-riscv/: README.md  pyproject.toml
extensions/pymcu-backend-riscv/src/csharp/cli/: PyMCU.Backend.RiscV.Cli.csproj
extensions/pymcu-backend-riscv/src/csharp/lib/: PyMCU.Backend.RiscV.csproj
extensions/pymcu-backend-sdk/: README.md  pyproject.toml
extensions/pymcu-backend-sdk/csharp/: CodeGen.cs
extensions/pymcu-backend-sdk/csharp/Analysis/: StackAllocator.cs
extensions/pymcu-backend-sdk/csharp/IR/: DataType.cs  Tacky.cs
extensions/pymcu-backend-sdk/src/pymcu_backend_sdk/: __init__.py  plugin.py
extensions/pymcu-backend-xtensa/: Directory.Build.props  README.md  pyproject.toml
extensions/pymcu-backend-xtensa/src/csharp/cli/: Program.cs
extensions/pymcu-backend-xtensa/src/csharp/lib/: XtensaBackendProvider.cs
extensions/pymcu-pic/: Directory.Build.props  README.md  pyproject.toml
extensions/pymcu-pic/src/csharp/lib/: PicBackendProvider.cs  PyMCU.Backend.PIC.csproj
extensions/pymcu-pio/: Directory.Build.props  README.md  pyproject.toml
extensions/pymcu-pio/src/csharp/cli/: Program.cs  PyMCU.Backend.PIO.Cli.csproj
extensions/pymcu-pio/src/csharp/lib/: PyMCU.Backend.PIO.csproj
extensions/pymcu-riscv/: Directory.Build.props  pyproject.toml
extensions/pymcu-riscv/src/csharp/cli/: Program.cs  (+1 more)
extensions/pymcu-toolchain-avr/: README.md  pyproject.toml
extensions/pymcu-toolchain-avr/src/pymcu_toolchain_avr/: avra.py  avrgas.py  plugin.py
extensions/pymcu-toolchain-pic/: README.md  pyproject.toml
extensions/pymcu-toolchain-pic/src/pymcu_toolchain_pic/: __init__.py  gputils.py  plugin.py
extensions/pymcu-toolchain-sdk/: README.md  pyproject.toml
extensions/pymcu-toolchain-sdk/src/pymcu_toolchain_sdk/: __init__.py  base_tool.py  plugin.py  toolchain.py
extensions/pymcu-xtensa/: Directory.Build.props  README.md  pyproject.toml
lib/: README.md  pyproject.toml
lib/src/: time.py
lib/src/pymcu/: __init__.py  ffi.py  pio.py  time.py  types.py
lib/src/pymcu/boards/: __init__.py  arduino_uno.py
lib/src/pymcu/chips/: atmega328p.py  ch32v003.py  pic10f200.py  pic16f18877.py  pic16f84a.py  pic16f877a.py  pic18f45k50.py
lib/src/pymcu/drivers/: __init__.py  bmp280.py  dht11.py  lcd.py  max7219.py  neopixel.py  ssd1306.py
lib/src/pymcu/hal/: adc.py  console.py  eeprom.py  gpio.py  i2c.py  irq.py  power.py  pwm.py  softi2c.py  softspi.py  spi.py  timer.py  uart.py  watchdog.py
lib/src/whipsnake/: __init__.py  ffi.py  pio.py  time.py  types.py
lib/src/whipsnake/boards/: __init__.py  arduino_uno.py
lib/src/whipsnake/chips/: __init__.py  atmega168.py  atmega168p.py  atmega328.py  atmega328p.py  atmega48.py  atmega48p.py  atmega88.py  atmega88p.py  attiny13.py  attiny13a.py  attiny2313.py  attiny24.py  attiny25.py  attiny4313.py  attiny44.py  attiny45.py  attiny84.py  attiny85.py  ch32v003.py  pic10f200.py  pic16f18877.py  pic16f84a.py  pic16f877a.py  pic18f45k50.py
lib/src/whipsnake/drivers/: bmp280.py  dht11.py  lcd.py  max7219.py  neopixel.py  ssd1306.py
lib/src/whipsnake/hal/: __init__.py  adc.py  eeprom.py  gpio.py  i2c.py  power.py  pwm.py  softspi.py  spi.py  timer.py  uart.py  watchdog.py
lib/src/whipsnake/math/: __init__.py
lib/src/whisnake/: __init__.py  ffi.py  pio.py  time.py  types.py
lib/src/whisnake/boards/: arduino_uno.py
lib/src/whisnake/chips/: atmega328p.py  ch32v003.py  pic10f200.py  pic16f18877.py  pic16f84a.py  pic16f877a.py  pic18f45k50.py
lib/src/whisnake/drivers/: bmp280.py  dht11.py  lcd.py  max7219.py  neopixel.py  ssd1306.py
lib/src/whisnake/hal/: __init__.py  adc.py  eeprom.py  gpio.py  i2c.py  power.py  pwm.py  softspi.py  spi.py  timer.py  uart.py  watchdog.py
src/driver/: Toolchain.h  __init__.py  main.cpp  main.py  pyproject.toml  toolchain.py
src/driver/backends/: __init__.py
src/driver/commands/: CmdBuild.h  CmdNew.h  ICommand.h  __init__.py  backend.py  build.py  clean.py  flash.py  new.py  toolchain.py  version.py
src/driver/core/: __init__.py  base_tool.py  boards.py  compiler.py
src/driver/programmers/: __init__.py  avrdude.py  base.py  pk2cmd.py
src/driver/pymcu_compiler/: main.py
src/driver/toolchains/: __init__.py  avra.py  avrgas.py  base.py  gputils.py
(+584 files in other folders)
