[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pymcu"
version = "0.1.0a1"
description = "Python-to-MCU compiler driver"
readme = "README.md"
authors = [
    { name = "Iván Montiel Cardona", email = "developer@begeistert.dev" }
]
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "typer>=0.12.0",
    "tomlkit>=0.12.0",
    "rich>=13.0.0",
    "pymcu-stdlib>=0.1.0a1"
]

[tool.uv.sources]
pymcu-stdlib = {path = "lib", editable = true}

[project.scripts]
pymcu = "driver.main:run_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/driver"]
# Include the native binary as a non-Python artifact
artifacts = ["src/driver/pymcuc", "src/driver/pymcuc.exe"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = ["src/", "hatch_build.py"]

[tool.pytest.ini_options]
pythonpath = ["."]
