[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pymcu"
version = "0.1.0a1"
description = "Python-to-MCU compiler driver"
readme = "README.md"
authors = [
    { name = "Iván Montiel Cardona", email = "developer@begeistert.dev" }
]
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "typer>=0.12.0",
    "tomlkit>=0.12.0",
    "rich>=13.0.0",
    "pymcu-stdlib>=0.1.0a1",
    "pymcu-toolchain-sdk>=0.1.0a1",
]

[project.optional-dependencies]
avr = ["pymcu-toolchain-avr>=0.1.0a1"]
pic = ["pymcu-toolchain-pic>=0.1.0a1"]
all = ["pymcu-toolchain-avr>=0.1.0a1", "pymcu-toolchain-pic>=0.1.0a1"]

[tool.uv.sources]
pymcu-stdlib = {path = "lib", editable = true}
pymcu-toolchain-sdk = {path = "extensions/pymcu-toolchain-sdk", editable = true}
pymcu-toolchain-avr = {path = "extensions/pymcu-toolchain-avr", editable = true}
pymcu-toolchain-pic = {path = "extensions/pymcu-toolchain-pic", editable = true}

[project.scripts]
pymcu = "driver.main:run_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/driver"]
# Include the native binary as a non-Python artifact
artifacts = ["src/driver/pymcuc", "src/driver/pymcuc.exe"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = ["src/", "hatch_build.py"]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "extensions/pymcu-toolchain-sdk/src",
    "extensions/pymcu-toolchain-avr/src",
    "extensions/pymcu-toolchain-pic/src",
]
