[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pymcu"
version = "0.1.0a1"
description = "Python-to-MCU compiler driver"
readme = "README.md"
authors = [
    { name = "Iván Montiel Cardona", email = "developer@begeistert.dev" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",
    "tomlkit>=0.12.0",
    "rich>=13.0.0",
    "pymcu-stdlib>=0.1.0a1",
    "pymcu-plugin-sdk>=0.1.0a1",
]

[project.optional-dependencies]
avr = ["pymcu-avr>=0.1.0a1"]
pic = ["pymcu-pic>=0.1.0a1"]
riscv = ["pymcu-riscv>=0.1.0a1"]
pio = ["pymcu-pio>=0.1.0a1"]
arm = ["pymcu-arm>=0.1.0a1"]
xtensa = ["pymcu-xtensa>=0.1.0a1"]
all = ["pymcu-avr>=0.1.0a1", "pymcu-pic>=0.1.0a1", "pymcu-riscv>=0.1.0a1", "pymcu-pio>=0.1.0a1", "pymcu-arm>=0.1.0a1", "pymcu-xtensa>=0.1.0a1"]

[tool.uv.sources]
pymcu-stdlib = {path = "lib", editable = true}
pymcu-plugin-sdk = {path = "extensions/pymcu-plugin-sdk", editable = true}
pymcu-avr = {path = "extensions/pymcu-avr", editable = true}
pymcu-pic = {path = "extensions/pymcu-pic", editable = true}
pymcu-riscv = {path = "extensions/pymcu-riscv", editable = true}
pymcu-pio = {path = "extensions/pymcu-pio", editable = true}
pymcu-arm = {path = "extensions/pymcu-arm", editable = true}
pymcu-xtensa = {path = "extensions/pymcu-xtensa", editable = true}

[project.scripts]
pymcu = "driver.main:run_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/driver"]
# Include the native binary as a non-Python artifact
artifacts = ["src/driver/pymcuc", "src/driver/pymcuc.exe"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = ["src/", "hatch_build.py"]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "extensions/pymcu-plugin-sdk/src",
    "extensions/pymcu-avr/src/python",
    "extensions/pymcu-pic/src/python",
    "extensions/pymcu-riscv/src/python",
    "extensions/pymcu-pio/src/python",
    "extensions/pymcu-arm/src/python",
    "extensions/pymcu-xtensa/src/python",
]
addopts = ["--import-mode=importlib"]
