[project]
name = "whisnake-stdlib"
version = "0.1.0a1"
description = "Standard Library for the Whisnake compiler"
readme = "README.md"
authors = [
    { name = "Iván Montiel Cardona", email = "developer@begeistert.dev" }
]
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/whisnake"]
artifacts = ["src/whisnake/**/*.inc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
