[project]
name = "whipsnake-stdlib"
version = "0.1.0a1"
description = "Standard Library for the Whipsnake compiler"
readme = "README.md"
authors = [
    { name = "Iván Montiel Cardona", email = "developer@begeistert.dev" }
]
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/whipsnake"]
artifacts = ["src/whipsnake/**/*.inc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
