[project]
name = "pymcu-stdlib"
version = "0.1.0a1"
description = "Standard Library for the PyMCU compiler"
readme = "README.md"
authors = [
    { name = "Iván Montiel Cardona", email = "developer@begeistert.dev" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/pymcu"]
artifacts = ["src/pymcu/**/*.inc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
