[project]
name = "test"
version = "0.1.0"
dependencies = ["whisnake-stdlib==0.1.2a4", "whipsnake==0.1.0a26"]

[[tool.uv.index]]
name = "gitea"
url = "https://gitea.begeistert.dev/api/packages/begeistert/pypi/simple"
explicit = true

[tool.uv.sources]
whisnake-stdlib = { index = "gitea" }
whipsnake = {index = "gitea"}

[tool.whip]
chip = "pic16f877a"
frequency = 4000000

[tool.whip.config]
# FOSC = "HS"
