[project]
name = "test"
version = "0.1.0"
dependencies = ["pymcu-stdlib==0.1.2a4", "pymcu==0.1.0a26"]

[[tool.uv.index]]
name = "gitea"
url = "https://gitea.begeistert.dev/api/packages/begeistert/pypi/simple"
explicit = true

[tool.uv.sources]
pymcu-stdlib = { index = "gitea" }
pymcu = {index = "gitea"}

[tool.pymcu]
chip = "pic16f877a"
frequency = 4000000

[tool.pymcu.config]
# FOSC = "HS"
