[project]
name = "test3"
version = "0.1.0"
dependencies = ["whipsnake-stdlib==0.1.2a3", "whipsnake==0.1.0a22"]

[[tool.uv.index]]
name = "gitea"
url = "https://gitea.begeistert.dev/api/packages/begeistert/pypi/simple"
explicit = true

[tool.uv.sources]
whipsnake-stdlib = {index = "gitea"}
whipsnake = {index = "gitea"}

[tool.whip]
chip = "atmega328p"
frequency = 4000000

[tool.whip.config]
# FOSC = "HS"

[tool.whip.toolchain]
# assembler = "gpasm"
