[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymcu-arm"
version = "0.1.0a1"
description = "PyMCU ARM support: LLVM IR codegen backend (RP2040 / RP2350)"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pymcu-plugin-sdk>=0.1.0a1",
]

[project.entry-points."pymcu.backends"]
arm = "pymcu.backend.arm:ArmBackendPlugin"

[project.entry-points."pymcu.toolchains"]
arm = "pymcu.toolchain.arm:ArmToolchainPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/python/pymcu"]
