[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymcu-backend-pic"
version = "0.1.0a1"
description = "PyMCU PIC codegen backend (PIC12, PIC14/16F, PIC18F)"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pymcu-backend-sdk>=0.1.0a1",
]

[project.entry-points."pymcu.backends"]
pic = "pymcu.backend.pic:PicBackendPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/python/pymcu"]
