[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymcu-backend-pio"
version = "0.1.0a1"
description = "PyMCU RP2040 PIO state-machine codegen backend"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pymcu-backend-sdk>=0.1.0a1",
]

[project.entry-points."pymcu.backends"]
pio = "pymcu.backend.pio:PIOBackendPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/python/pymcu"]
