[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymcu-backend-riscv"
version = "0.1.0a1"
description = "PyMCU RISC-V codegen backend (RV32EC, CH32V)"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pymcu-backend-sdk>=0.1.0a1",
]

[project.entry-points."pymcu.backends"]
riscv = "pymcu.backend.riscv:RiscVBackendPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/python/pymcu"]
