[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymcu-riscv"
version = "0.1.0a1"
description = "PyMCU RISC-V support: codegen backend (RV32EC, CH32V)"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pymcu-plugin-sdk>=0.1.0a1",
]

[project.entry-points."pymcu.backends"]
riscv = "pymcu.backend.riscv:RiscVBackendPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/python/pymcu"]
