[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymcu-xtensa"
version = "0.1.0a1"
description = "PyMCU Xtensa support: codegen backend (ESP8266, ESP32, ESP32-S2, ESP32-S3)"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pymcu-plugin-sdk>=0.1.0a1",
]

[project.entry-points."pymcu.backends"]
xtensa = "pymcu.backend.xtensa:XtensaBackendPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/python/pymcu"]
