[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymcu-pio"
version = "0.1.0a1"
description = "PyMCU RP2040 PIO support: PIO state-machine codegen backend and pioasm toolchain"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pymcu-plugin-sdk>=0.1.0a1",
]

[project.entry-points."pymcu.backends"]
pio = "pymcu.backend.pio:PIOBackendPlugin"

[project.entry-points."pymcu.toolchains"]
pio = "pymcu.toolchain.pio:PIOToolchainPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/python/pymcu"]
