[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pymcu-toolchain-pic"
version = "0.1.0a1"
description = "PIC toolchain plugin for PyMCU (GNU PIC Utilities: gpasm/gplink)"
readme = "README.md"
authors = [
    { name = "Iván Montiel Cardona", email = "developer@begeistert.dev" }
]
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "pymcu-toolchain-sdk>=0.1.0a1",
]

[project.entry-points."pymcu.toolchains"]
pic = "pymcu_toolchain_pic:PicToolchainPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/pymcu_toolchain_pic"]
