[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pymcu-toolchain-pic"
version = "0.1.0a1"
description = "PIC toolchain plugin for PyMCU (GNU PIC Utilities: gpasm/gplink)"
readme = "README.md"
authors = [
    { name = "Iván Montiel Cardona", email = "developer@begeistert.dev" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pymcu-toolchain-sdk>=0.1.0a1",
]

[project.entry-points."pymcu.toolchains"]
pic = "pymcu.toolchain.pic:PicToolchainPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/pymcu"]
