[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pymcu-toolchain-sdk"
version = "0.1.0a1"
description = "Shared base classes and plugin protocol for PyMCU toolchain packages"
readme = "README.md"
authors = [
    { name = "Iván Montiel Cardona", email = "developer@begeistert.dev" }
]
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "rich>=13.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pymcu_toolchain_sdk"]
